--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <header>
         <nav>
-        <a href="./index.html">Web Studio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
             <li><a href="./index.html">Studio</a></li>
             <li><a href="./index.html">Portfolio</a></li>
@@ -26,8 +26,8 @@
         </ul>
         </nav>
     <address>
-        <a href="info@devstudio.com">info@devstudio.com</a>
-        <a href="+110001111111">+11 (000) 111-11-11</a>
+        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
     </address>
 
 
