--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-    <header>
+<header>
         <nav>
         <a href="./index.html">WebStudio</a>
         <ul>
@@ -25,15 +25,17 @@
             <li><a href="./index.html">Contacts</a></li>
         </ul>
         </nav>
-    <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        <address>
+            <ul>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            </ul>
     </address>
 
 
     </header>
     
-    <main>
+        <main>
     <section class="main-page">
 <h1 class="title">Effective Solutions for Your Business</h1>
 <button type="button" class="button">Order Service</button>
@@ -44,11 +46,23 @@
 <h2 hidden="">Section 1 </h2>
 
 <ul>
-    <li><h3>Strategy</h3><p>Our goal is to identify the business
-    problem to walk away with the perfect and creative solution.</p></li>
-    <li><h3>Punctuality</h3><p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p></li>
-    <li><h3>Diligence</h3><p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p></li>
-    <li><h3>Technologies</h3><p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
+ <li>
+        <h3>Strategy</h3>
+        <p>Our goal is to identify the business
+    problem to walk away with the perfect and creative solution.</p>
+</li>
+<li>
+        <h3>Punctuality</h3>
+        <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+</li>
+<li>
+        <h3>Diligence</h3>
+        <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+</li>
+    <li>
+        <h3>Technologies</h3>
+        <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+    </li>
 </ul>
 </section>  
 
@@ -57,27 +71,42 @@
    <h2 class="our-team">Our Team</h2> 
 
    <ul>
-    <li><img src="./image/Team Card 1.jpg" alt="Mark Guerrero" 
+    <li>
+        <img src="./image/Team Card 1.jpg" alt="Mark Guerrero" 
         width="264"
-        height="380"></li>
-    <li><img src="./image/Team Card 2.jpg" alt="Tom Ford"
+        height="380">
+    <h3>Mark Guerrero</h3>
+    <p>Product Designer</p>
+    </li>
+    <li>
+        <img src="./image/Team Card 2.jpg" alt="Tom Ford"
         width="264"
-        height="380"></li>
-    <li><img src="./image/Team Card 3.jpg" alt="Camila Garcia"
+        height="380">
+    <h3>Tom Ford</h3>
+    <p>Fronted Developer</p>
+    </li>
+    <li>
+        <img src="./image/Team Card 3.jpg" alt="Camila Garcia"
         width="264"
-        height="380"></li>
-    <li><img src="./image/Team Card 4.jpg" alt="Daniel Wilsonw"
+        height="380">
+    <h3>Camila Garcia</h3>
+    <p>Marketing</p>
+    </li>
+    <li>
+        <img src="./image/Team Card 4.jpg" alt="Daniel Wilsonw"
         width="264"
-        height="380"></li>
+        height="380">
+    <h3>Daniel Wilson</h3>
+    <p>UI Designer</p>
+    </li>
    </ul>
 </section>
 
 
 
 </main>
-
 <footer>
-<a href="./index.html">Web Studio</a>
+<a href="./index.html">WebStudio</a>
 <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
 </footer>
 </body>
