--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 </section>
 
 <section class="facts">
-<h2 hidden="">Section 1 </h2>
+<h2 hidden="">Facts about our services</h2>
 
 <ul>
  <li>
@@ -72,28 +72,28 @@
 
    <ul>
     <li>
-        <img src="./image/Team Card 1.jpg" alt="Mark Guerrero" 
+        <img src="./image/Team Card 1.jpg" alt="Portrait of Mark Guerrero" 
         width="264"
         height="380">
     <h3>Mark Guerrero</h3>
     <p>Product Designer</p>
     </li>
     <li>
-        <img src="./image/Team Card 2.jpg" alt="Tom Ford"
+        <img src="./image/Team Card 2.jpg" alt="Portrait of Tom Ford"
         width="264"
         height="380">
     <h3>Tom Ford</h3>
     <p>Fronted Developer</p>
     </li>
     <li>
-        <img src="./image/Team Card 3.jpg" alt="Camila Garcia"
+        <img src="./image/Team Card 3.jpg" alt="Portrait of Camila Garcia"
         width="264"
         height="380">
     <h3>Camila Garcia</h3>
     <p>Marketing</p>
     </li>
     <li>
-        <img src="./image/Team Card 4.jpg" alt="Daniel Wilsonw"
+        <img src="./image/Team Card 4.jpg" alt="Portrait of Daniel Wilsonw"
         width="264"
         height="380">
     <h3>Daniel Wilson</h3>
