--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
    <ul>
     <li>
-        <img src="./image/Team Card 1.jpg" alt="Portrait of Mark Guerrero" width="264" height="380">
+        <img src="image/Team Card 1.jpg" alt="Portrait of Mark Guerrero" width="264" height="380">
     <h3>Mark Guerrero</h3>
     <p>Product Designer</p>
     </li>
