--- a/index.html
+++ b/index.html
@@ -72,22 +72,22 @@
 
    <ul>
     <li>
-        <img src="image/Team Card 1.jpg" alt="Portrait of Mark Guerrero" width="264" height="380">
+        <img src="./image/Team Card 1.jpg" alt="Portrait of Mark Guerrero" width="264" height="380">
     <h3>Mark Guerrero</h3>
     <p>Product Designer</p>
     </li>
     <li>
-        <img src="image/Team Card 2.jpg" alt="Portrait of Tom Ford" width="264" height="380">
+        <img src="./image/Team Card 2.jpg" alt="Portrait of Tom Ford" width="264" height="380">
     <h3>Tom Ford</h3>
     <p>Fronted Developer</p>
     </li>
     <li>
-        <img src="image/Team Card 3.jpg" alt="Portrait ofCamila Garcia" width="264" height="380">
+        <img src="./image/Team Card 3.jpg" alt="Portrait ofCamila Garcia" width="264" height="380">
     <h3>Camila Garcia</h3>
     <p>Marketing</p>
     </li>
     <li>
-        <img src="image/Team Card 4.jpg" alt="Portrait of Daniel Wilsonw" width="264" height="380">
+        <img src="./image/Team Card 4.jpg" alt="Portrait of Daniel Wilsonw" width="264" height="380">
     <h3>Daniel Wilson</h3>
     <p>UI Designer</p>
     </li>
